<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />


        <item
            android:id="@+id/nav_tasks"
            android:icon="@drawable/ic_baseline_task_alt_24"
            android:title="@string/menu_tasks" />
        <item
            android:id="@+id/nav_commute"
            android:icon="@drawable/ic_baseline_bus_alert_24"
            android:title="@string/menu_commute" />

        <item
            android:id="@+id/nav_locations"
            android:icon="@drawable/ic_baseline_person_pin_circle_24"
            android:title="@string/menu_locations" />

        <item
            android:id="@+id/nav_notes"
            android:icon="@drawable/ic_baseline_sticky_note_2_24"
            android:title="@string/menu_notes" />


    </group>

    <group android:checkableBehavior="single">
        <item android:title="User">
            <menu>
                <item
                    android:id="@+id/logout"
                    android:icon="@drawable/ic_baseline_logout_24"
                    android:title="Logout" />
            </menu>
        </item>
    </group>
</menu>